--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
   }
   body{
-    background-color: rgb(251, 240, 224);
+    background-color: rgb(192, 189, 185);
   }
   header{
-    background-color: rgb(42, 41, 41);
+    background-color: rgb(23, 104, 93);
     color: rgb(153, 198, 222);
     text-align: center;
     padding: 1rem;
@@ -72,4 +72,25 @@
     margin-left: -200px;
     margin-top: 50px;
   }
+/* product */
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 10px;
+    margin-top: 150px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 30px;
+    margin-bottom: 100px;
+  }
   
+  .grid img {
+    width: 80%;
+    height: auto;
+  }
+  .grid p {
+    width: 80%;
+    margin-left: 30px;
+  }  
